--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
 }
 
 body {
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  scroll-behavior: smooth;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -27,5 +31,17 @@ body {
 }
 
 html {
+  scrollbar-width: none;
   scroll-behavior: smooth;
+}
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
 }
